--- a/ex1/ex1.html
+++ b/ex1/ex1.html
@@ -12,7 +12,7 @@
   <body>
     <a-scene>
         <a-assets>
-            <img id="tierra" src="ex1/tierra.jpg">
+            <img id="tierra" src="ex1/tierra.png">
         </a-assets>
         <a-sky color="#005"></a-sky>
         <a-sphere position="0 2 -5" radius="1" src="#nadal"
