--- a/ex1/ex1.html
+++ b/ex1/ex1.html
@@ -12,12 +12,16 @@
   <body>
     <a-scene>
         <a-assets>
-            <img id="tierra" src="ex1/tierra.png">
+            <img id="tierra" src="tierra.png">
         </a-assets>
-        <a-sky color="#005"></a-sky>
-        <a-sphere position="0 2 -5" radius="1" src="#nadal"
+        <a-sky color="#000"></a-sky>
+        <a-sphere position="0 2 -5" radius="1" src="#tierra"
            animation="property: rotation; dur: 10000;
-           to: 0 360 0; loop: true"></a-sphere>  
+           to: 0 360 0; loop: true"></a-sphere> 
+        
+        <a-sphere position="0 2 -5" radius="1" src="#nadal"
+        animation="property: rotation; dur: 10000;
+        to: 0 360 0; loop: true"></a-sphere> 
     </a-scene>
   </body>
 </html>
