--- a/ex1/ex1.html
+++ b/ex1/ex1.html
@@ -13,11 +13,17 @@
     <a-scene>
         <a-assets>
             <img id="tierra" src="tierra.png">
+            <img id="tierra" src="luna.jpg">
+
         </a-assets>
         <a-sky color="#000"></a-sky>
         <a-sphere position="0 2 -5" radius="1" src="#tierra"
            animation="property: rotation; dur: 10000;
            to: 0 360 0; loop: true"></a-sphere> 
+
+           <a-sphere position="0 2 -5" radius="1" src="#luna"
+           animation="property: rotation; dur: 10000;
+           to: 0 360 0; loop: true"></a-sphere>    
     </a-scene>
   </body>
 </html>
