--- a/ex1/ex1.html
+++ b/ex1/ex1.html
@@ -12,7 +12,7 @@
   <body>
     <a-scene>
         <a-assets>
-            <img id="tierra" src="tierra.png">
+            <img id="tierra" src="tierra.jpg">
             <img id="tierra" src="luna.jpg">
 
         </a-assets>
