--- a/ex1/ex1.html
+++ b/ex1/ex1.html
@@ -13,7 +13,7 @@
     <a-scene>
         <a-assets>
             <img id="tierra" src="tierra.jpg">
-            <img id="tierra" src="luna.jpg">
+            <img id="luna" src="luna.jpg">
 
         </a-assets>
         <a-sky color="#000"></a-sky>
@@ -21,7 +21,7 @@
            animation="property: rotation; dur: 10000;
            to: 0 360 0; loop: true"></a-sphere> 
 
-           <a-sphere position="0 2 -5" radius="1" src="#luna"
+           <a-sphere position="3 2 -5" radius="0.5" src="#luna"
            animation="property: rotation; dur: 10000;
            to: 0 360 0; loop: true"></a-sphere>    
     </a-scene>
