--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </div>
           <div class="about" id="sobre-mi">
                 <h2>Daniel Gallego Prado</h2>
-                <img src="moharex.jpg" alt="Foto de perfil">
+                <img src="ususario.jpg" alt="Foto de perfil">
                
                 <p>Estudiant de SMIX del cicle formatiu de Grau Mitjà en Sistemes Microinformàtics i Xarxes.
                 </p>
