--- a/ex2/ex2.html
+++ b/ex2/ex2.html
@@ -15,7 +15,7 @@
     <a-scene mindar-image="imageTargetSrc: targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
         <a-asset-item id="avatarModel" src="ex2/personatge1.glb"></a-asset-item>
-        </a-scene>
+        </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
         <a-entity mindar-image-target="targetIndex: 0">
@@ -23,7 +23,7 @@
                 scale="0.005 0.005 0.005"
                 position="0 0 0"
                 rotation="90 0 0"
-                animation-mixer ="clip: flair" >
+                animation-mixer ="clip: flair__1_" >
             </a-gltf-model>              
         </a-entity>      
     </a-scene>
