--- a/ex2/ex2.html
+++ b/ex2/ex2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Import A-Frame -->
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <!-- Import MindAR -->
