--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                 </div>
 
                 <div class="box">
-                    <img src="bloqueo (1) (1).png" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
+                    <img src="pibe10.png" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
                     <div>
-                        <h3>Títol 2</h3>
-                        <p>Descripció breu.</p>
+                        <h3>2º Proyecte </h3>
+                        <p>El invizimal</p>
                     </div>
                 </div>
                 <div class="box">
