--- a/ex3.html
+++ b/ex3.html
@@ -12,51 +12,47 @@
         <a-assets>
             <a-asset-item id="avatarModel" src="personatge1.glb"></a-asset-item>
             <a-asset-item id="elpibe" src="waldo-wheres-waldo/source/Waldo 3d.glb"></a-asset-item>
-
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
             <a-gltf-model src="#elpibe"
-            scale="0.005 0.005 0.005"
-            position="0 0 0"
-            rotation="90 0 0"
-            animation-mixer ="clip: flair__1_" >
-            </a-gltf-model>
+              scale="0.005 0.005 0.005"
+              position="0 0 0"
+              rotation="90 0 0">
+           </a-gltf-model>
         </a-entity>
         
     
         <a-entity mindar-image-target="targetIndex: 1">
             <a-gltf-model src="#avatarModel"
-            scale="0.005 0.005 0.005"
-            position="0 0 0"
-            rotation="90 0 0"
-            animation-mixer ="clip: flair__1_" >
+              scale="0.005 0.005 0.005"
+              position="0 0 0"
+              rotation="90 0 0"
+              animation-mixer ="clip: flair__1_" >
             </a-gltf-model>
         </a-entity> 
 
         <a-entity mindar-image-target="targetIndex: 2">
             <a-gltf-model src="#avatarModel"
-            scale="0.005 0.005 0.005"
-            position="0 0 0"
-            rotation="90 0 0"
-            animation-mixer ="clip: flair__1_" >
+              scale="0.005 0.005 0.005"
+              position="0 0 0"
+              rotation="90 0 0"
+              animation-mixer ="clip: flair__1_" >
             </a-gltf-model>
         </a-entity> 
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
         <a-entity mindar-image-target="targetIndex: 3">
             <a-gltf-model src="#avatarModel"
-            scale="0.005 0.005 0.005"
-            position="0 0 0"
-            rotation="90 0 0"
-            animation-mixer ="clip: flair__1_" >
+              scale="0.005 0.005 0.005"
+              position="0 0 0"
+              rotation="90 0 0"
+              animation-mixer ="clip: flair__1_" >
             </a-gltf-model>
         </a-entity> 
-
-
-
     </a-scene>
-  </body>
+  
+</body>
 </html>
