--- a/ex3/ex3.html
+++ b/ex3/ex3.html
@@ -11,18 +11,14 @@
     <a-scene mindar-image="imageTargetSrc: targets (5).mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
             <a-asset-item id="avatarModel" src="personatge1.glb"></a-asset-item>
-            <a-asset-item id="elpibe" src="waldo-wheres-waldo/source/Waldo 3d.glb"></a-asset-item>
+            <a-asset-item id="elpibe" src="ex3/wally.png"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-        <a-entity mindar-image-target="targetIndex: 0">
-            <a-gltf-model src="#elpibe"
-              scale="0.005 0.005 0.005"
-              position="0 0 0"
-              rotation="90 0 0">
-           </a-gltf-model>
-        </a-entity>
+        <a-plane 
+          src="#elpibe" position="0 0 0" height="1" width="1" rotation="0 0 0">
+        </a-plane> 
         
     
         <a-entity mindar-image-target="targetIndex: 1">
