--- a/ex3/ex3.html
+++ b/ex3/ex3.html
@@ -11,7 +11,7 @@
     <a-scene mindar-image="imageTargetSrc: targets (5).mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
             <a-asset-item id="avatarModel" src="personatge1.glb"></a-asset-item>
-            <a-asset-item id="elpibe" src="ex3/wally.png"></a-asset-item>
+            <a-asset-item id="elpibe" src="wally.png"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
