--- a/ex3/ex3.html
+++ b/ex3/ex3.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-   <a-scene mindar-image="imageTargetSrc: buena.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+   <a-scene mindar-image="imageTargetSrc: skibidi.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
             <a-asset-item id="avatarModel" src="personatge1.glb"></a-asset-item>
             <img id="elpibe" src="wally.png"/> 
