--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
                 </div>
 
                 <div class="box">
-                    <img src="bloqueo (1) (1).png" alt="Imatge 1" onclick="location.href=''">
+                    <img src="bloqueo (1) (1).png" alt="Imatge 1" onclick="location.href='ex4/ex4.html'">
                     <div>
-                        <h3>y tal</h3>
-                        <p>en el proceso</p>
+                        <h3>4º Proyecte</h3>
+                        <p>El zorro</p>
                      
                         
                     </div>
