--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
                 </div>
 
                 <div class="box">
-                    <img src="bloqueo (1) (1).png" alt="Imatge 1" onclick="location.href='ex4/ex4.html'">
+                    <img src="SoyPeruano!.jpg" alt="Imatge 1" onclick="location.href='ex4/ex4.html'">
                     <div>
                         <h3>4º Proyecte</h3>
-                        <p>El zorro</p>
+                        <p>En aquest proyecte, al detectar la cara de una persona proyecta una máscara y un barret</p>
                      
                         
                     </div>
