--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="ex3/wally.png" alt="Imatge 3" onclick="location.href='ex3/ex3.html'">
+                    <img src="wally500x500.png" alt="Imatge 3" onclick="location.href='ex3/ex3.html'">
                     <div>
                         <h3>3º Proyecte</h3>
                         <p>Cercar a Wally en un mapa, si no, surt un home dolent.</p>
@@ -198,7 +198,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="SoyPeruano!.jpg" alt="Imatge 1" onclick="location.href='ex4/ex4.html'">
+                    <img src="SoyPeruano!500x500.jpg" alt="Imatge 1" onclick="location.href='ex4/ex4.html'">
                     <div>
                         <h3>4º Proyecte</h3>
                         <p>En aquest proyecte, al detectar la cara de una persona proyecta una máscara y un barret</p>
