--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
                 </div>
 
                 <div class="box">
-                    <img src="bloqueo (1) (1).png" alt="Imatge 2" onclick="location.href=''">
+                    <img src="clemente (2).jpg" alt="Imatge 2" onclick="location.href='ex5/ex5.html'">
                     <div>
-                        <h3>y tal</h3>
-                        <p>en el proceso</p>
+                        <h3>5º Proyecte</h3>
+                        <p>Proyecte entorn 3D amb objectes amb moviment si cliquem sobre ells</p>
                     </div>
                 </div>
                 <div class="box">
