--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="bloqueo (1) (1).png" alt="Imatge 3" onclick="location.href=''">
+                    <img src="Captura ex6.png" alt="Imatge 3" onclick="location.href='ex6/ex6.html'">
                     <div>
-                        <h3>y tal</h3>
-                        <p>en el proceso</p>
+                        <h3>Provant la llibreria A-Frame</h3>
+                        <p>Aquesta llibreria ens permet utilitzar com a fons imatges i vídeos de 360º, en aquest cas utilitzem una imatge i animem, a sobre de la imatge, un objecte 3D</p>
                     </div>
                 </div>
             
