--- a/index.html
+++ b/index.html
@@ -214,11 +214,20 @@
                         <p>Proyecte entorn 3D amb objectes amb moviment si cliquem sobre ells</p>
                     </div>
                 </div>
+
                 <div class="box">
                     <img src="Captura ex6.png" alt="Imatge 3" onclick="location.href='ex6/ex6.html'">
                     <div>
                         <h3>Provant la llibreria A-Frame</h3>
                         <p>Aquesta llibreria ens permet utilitzar com a fons imatges i vídeos de 360º, en aquest cas utilitzem una imatge i animem, a sobre de la imatge, un objecte 3D</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="ex8.png" alt="Imatge 3" onclick="location.href='ex8/ex8.html'">
+                    <div>
+                        <h3>Visualització del castell</h3>
+                        <p>Cliquem sobre els cercles blaus i podrem veure diferents parts del castell, a més en compta la seva história </p>
                     </div>
                 </div>
             
