--- a/ex8/ex8.html
+++ b/ex8/ex8.html
@@ -27,7 +27,7 @@
       <img id="plano" src="imatges/plano.jpg">
      
       <!-- Audios -->
-      <audio id="audio1" src="audios/Torre.mp3"></audio>
+      <audio id="audio1" src="audios/torre.mp3"></audio>
       <audio id="aduio2" src="audios/Pati.mp3"></audio>
       <audio id="audio3" src="audios/Planta2.mp3"></audio>
       <audio id="audio4" src="audios/castell.mp3"></audio>
