--- a/index.html
+++ b/index.html
@@ -231,6 +231,16 @@
                     </div>
                 </div>
             
+
+                <div class="box">
+                    <img src="etabaina.png" alt="Imatge 3" onclick="location.href='ex9/ex9.html'">
+                    <div>
+                        <h3>Mars Attack</h3>
+                        <p>Videojoc de matar als models 3D </p>
+                    </div>
+                </div>
+
+
             
             </div>
           <div class="about" id="sobre-mi">
