--- a/index.html
+++ b/index.html
@@ -240,6 +240,14 @@
                     </div>
                 </div>
 
+                <div class="box">
+                    <img src="elpong.png" alt="Imatge 3" onclick="location.href='ex9/ex9.html'">
+                    <div>
+                        <h3>Pong</h3>
+                        <p>Recreació del videojoc "Pong".</p>
+                    </div>
+                </div>
+
 
             
             </div>
